Removed all occourences of type: any, with a property typed solution. fixed floating cars issue on mobile, fixed disapearing traffic issuse with a timer

--- a/src/Components/AirTraffic.css
+++ b/src/Components/AirTraffic.css
@@ -1,8 +1,10 @@
 .air__traffic--container {
-  display: inline-block;
+  display: flex;
+  align-items: flex-end;
+  position: relative;
   width: 100%;
-  height: 300px;
-  margin-bottom: 30%;
+  height: 1px;
+  margin-bottom: 55%;
   z-index: 2;
 }
 
